jzintv/src/bincfg/bincfg_grmr.output
Terminals unused in grammar

   TOK_ERROR_BAD
   TOK_ERROR_OOM


Grammar

    0 $accept: config_file $end

    1 config_file: config

    2 config: config sec_memspan
    3       | config sec_macro
    4       | config sec_varlike
    5       | config sec_unsup
    6       | seed_config
    7       | error_tok

    8 seed_config: %empty
    9            | eolns

   10 sec_memspan: sec_banksw
   11            | sec_mapping
   12            | sec_ecsbank
   13            | sec_memattr
   14            | sec_preload

   15 bankswitch: TOK_SEC_BANKSWITCH

   16 sec_banksw: bankswitch eoln banksw_list

   17 banksw_list: banksw_list banksw_rec
   18            | banksw_rec

   19 banksw_rec: hex_num '-' hex_num eoln
   20           | eoln
   21           | error_tok eoln

   22 mapping: TOK_SEC_MAPPING

   23 sec_mapping: mapping eoln mapping_list

   24 mapping_list: mapping_list mapping_rec
   25             | mapping_rec

   26 mapping_rec: hex_num '-' hex_num '=' hex_num eoln
   27            | hex_num '-' hex_num '=' hex_num TOK_PAGE hex_num eoln
   28            | eoln
   29            | error_tok eoln

   30 ecsbank: TOK_SEC_ECSBANK

   31 sec_ecsbank: ecsbank eoln ecsbank_list

   32 ecsbank_list: ecsbank_list ecsbank_rec
   33             | ecsbank_rec

   34 ecsbank_rec: hex_num ':' hex_num '-' hex_num '=' hex_num eoln
   35            | eoln
   36            | error_tok eoln

   37 memattr: TOK_SEC_MEMATTR

   38 sec_memattr: memattr eoln memattr_list

   39 memattr_list: memattr_list memattr_rec
   40             | memattr_rec

   41 memattr_rec: hex_num '-' hex_num '=' memattr dec_num eoln
   42            | hex_num '-' hex_num eoln
   43            | eoln
   44            | error_tok eoln

   45 preload: TOK_SEC_PRELOAD

   46 sec_preload: preload eoln preload_list

   47 preload_list: preload_list preload_rec
   48             | preload_rec

   49 preload_rec: hex_num '-' hex_num '=' hex_num eoln
   50            | error_tok eoln

   51 macro: TOK_SEC_MACRO

   52 sec_macro: macro eoln macro_list

   53 macro_list: macro_list macro_rec
   54           | macro_rec

   55 macro_rec: TOK_MAC_QUIET macro_line
   56          | macro_line
   57          | TOK_MAC_QUIET eoln
   58          | eoln

   59 macro_line: mac_reg hex_num eoln
   60           | TOK_MAC_LOAD string dec_num hex_num eoln
   61           | TOK_MAC_WATCH string watch_list eoln
   62           | TOK_MAC_POKE hex_num hex_num eoln
   63           | TOK_MAC_INSPECT hex_num eoln
   64           | TOK_MAC_RUNTO hex_num eoln
   65           | TOK_MAC_TRACE hex_num eoln
   66           | TOK_MAC_AHEAD eoln
   67           | TOK_MAC_BLANK eoln
   68           | TOK_MAC_RUN eoln
   69           | TOK_MAC_VIEW eoln
   70           | error_tok eoln

   71 mac_reg: TOK_MAC_REG

   72 watch_list: watch_list ',' watch_span
   73           | watch_span

   74 watch_span: watch_addr
   75           | watch_range

   76 watch_addr: hex_num

   77 watch_range: hex_num '-' hex_num

   78 sec_varlike: varlike_head eoln var_list

   79 varlike_head: TOK_SEC_VARS
   80             | TOK_SEC_JOYSTICK
   81             | TOK_SEC_KEYS
   82             | TOK_SEC_CAPSLOCK
   83             | TOK_SEC_NUMLOCK
   84             | TOK_SEC_SCROLLLOCK

   85 var_list: var_list var_rec
   86         | var_rec

   87 var_rec: string '=' strnum eoln
   88        | eoln
   89        | error_tok eoln

   90 sec_unsup: unknown_sec eoln

   91 unknown_sec: TOK_SEC_DISASM
   92            | TOK_SEC_VOICES
   93            | TOK_SEC_UNKNOWN

   94 strnum: TOK_NAME
   95       | TOK_HEX
   96       | TOK_DEC
   97       | TOK_DECONLY

   98 dec_num: TOK_DEC
   99        | TOK_DECONLY

  100 hex_num: TOK_HEX
  101        | TOK_DEC

  102 string: TOK_NAME
  103       | TOK_HEX
  104       | TOK_DEC
  105       | TOK_DECONLY

  106 memattr: TOK_RAM
  107        | TOK_ROM
  108        | TOK_WOM

  109 eolns: eolns eoln
  110      | eoln

  111 eoln: '\n'

  112 error_tok: error


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 111
',' (44) 72
'-' (45) 19 26 27 34 41 42 49 77
':' (58) 34
'=' (61) 26 27 34 41 49 87
error (256) 112
TOK_SEC_BANKSWITCH (258) 15
TOK_SEC_MAPPING (259) 22
TOK_SEC_ECSBANK (260) 30
TOK_SEC_MEMATTR (261) 37
TOK_SEC_PRELOAD (262) 45
TOK_SEC_MACRO (263) 51
TOK_SEC_VARS (264) 79
TOK_SEC_JOYSTICK (265) 80
TOK_SEC_KEYS (266) 81
TOK_SEC_CAPSLOCK (267) 82
TOK_SEC_NUMLOCK (268) 83
TOK_SEC_SCROLLLOCK (269) 84
TOK_SEC_DISASM (270) 91
TOK_SEC_VOICES (271) 92
TOK_SEC_UNKNOWN (272) 93
TOK_RAM (273) 106
TOK_ROM (274) 107
TOK_WOM (275) 108
TOK_PAGE (276) 27
TOK_MAC_QUIET (277) 55 57
TOK_MAC_REG (278) 71
TOK_MAC_AHEAD (279) 66
TOK_MAC_BLANK (280) 67
TOK_MAC_INSPECT (281) 63
TOK_MAC_LOAD (282) 60
TOK_MAC_RUN (283) 68
TOK_MAC_POKE (284) 62
TOK_MAC_RUNTO (285) 64
TOK_MAC_TRACE (286) 65
TOK_MAC_VIEW (287) 69
TOK_MAC_WATCH (288) 61
TOK_DECONLY (289) 97 99 105
TOK_DEC (290) 96 98 101 104
TOK_HEX (291) 95 100 103
TOK_NAME (292) 94 102
TOK_ERROR_BAD (293)
TOK_ERROR_OOM (294)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
config_file (46)
    on left: 1, on right: 0
config (47)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5
seed_config (48)
    on left: 8 9, on right: 6
sec_memspan (49)
    on left: 10 11 12 13 14, on right: 2
bankswitch (50)
    on left: 15, on right: 16
sec_banksw (51)
    on left: 16, on right: 10
banksw_list (52)
    on left: 17 18, on right: 16 17
banksw_rec (53)
    on left: 19 20 21, on right: 17 18
mapping (54)
    on left: 22, on right: 23
sec_mapping (55)
    on left: 23, on right: 11
mapping_list (56)
    on left: 24 25, on right: 23 24
mapping_rec (57)
    on left: 26 27 28 29, on right: 24 25
ecsbank (58)
    on left: 30, on right: 31
sec_ecsbank (59)
    on left: 31, on right: 12
ecsbank_list (60)
    on left: 32 33, on right: 31 32
ecsbank_rec (61)
    on left: 34 35 36, on right: 32 33
memattr (62)
    on left: 37 106 107 108, on right: 38 41
sec_memattr (63)
    on left: 38, on right: 13
memattr_list (64)
    on left: 39 40, on right: 38 39
memattr_rec (65)
    on left: 41 42 43 44, on right: 39 40
preload (66)
    on left: 45, on right: 46
sec_preload (67)
    on left: 46, on right: 14
preload_list (68)
    on left: 47 48, on right: 46 47
preload_rec (69)
    on left: 49 50, on right: 47 48
macro (70)
    on left: 51, on right: 52
sec_macro (71)
    on left: 52, on right: 3
macro_list (72)
    on left: 53 54, on right: 52 53
macro_rec (73)
    on left: 55 56 57 58, on right: 53 54
macro_line (74)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70, on right: 55 56
mac_reg (75)
    on left: 71, on right: 59
watch_list (76)
    on left: 72 73, on right: 61 72
watch_span (77)
    on left: 74 75, on right: 72 73
watch_addr (78)
    on left: 76, on right: 74
watch_range (79)
    on left: 77, on right: 75
sec_varlike (80)
    on left: 78, on right: 4
varlike_head (81)
    on left: 79 80 81 82 83 84, on right: 78
var_list (82)
    on left: 85 86, on right: 78 85
var_rec (83)
    on left: 87 88 89, on right: 85 86
sec_unsup (84)
    on left: 90, on right: 5
unknown_sec (85)
    on left: 91 92 93, on right: 90
strnum (86)
    on left: 94 95 96 97, on right: 87
dec_num (87)
    on left: 98 99, on right: 41 60
hex_num (88)
    on left: 100 101, on right: 19 26 27 34 41 42 49 59 60 62 63 64
    65 76 77
string (89)
    on left: 102 103 104 105, on right: 60 61 87
eolns (90)
    on left: 109 110, on right: 9 109
eoln (91)
    on left: 111, on right: 16 19 20 21 23 26 27 28 29 31 34 35 36
    38 41 42 43 44 46 49 50 52 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 78 87 88 89 90 109 110
error_tok (92)
    on left: 112, on right: 7 21 29 36 44 50 70 89


State 0

    0 $accept: . config_file $end

    error  shift, and go to state 1
    '\n'   shift, and go to state 2

    $end                reduce using rule 8 (seed_config)
    TOK_SEC_BANKSWITCH  reduce using rule 8 (seed_config)
    TOK_SEC_MAPPING     reduce using rule 8 (seed_config)
    TOK_SEC_ECSBANK     reduce using rule 8 (seed_config)
    TOK_SEC_MEMATTR     reduce using rule 8 (seed_config)
    TOK_SEC_PRELOAD     reduce using rule 8 (seed_config)
    TOK_SEC_MACRO       reduce using rule 8 (seed_config)
    TOK_SEC_VARS        reduce using rule 8 (seed_config)
    TOK_SEC_JOYSTICK    reduce using rule 8 (seed_config)
    TOK_SEC_KEYS        reduce using rule 8 (seed_config)
    TOK_SEC_CAPSLOCK    reduce using rule 8 (seed_config)
    TOK_SEC_NUMLOCK     reduce using rule 8 (seed_config)
    TOK_SEC_SCROLLLOCK  reduce using rule 8 (seed_config)
    TOK_SEC_DISASM      reduce using rule 8 (seed_config)
    TOK_SEC_VOICES      reduce using rule 8 (seed_config)
    TOK_SEC_UNKNOWN     reduce using rule 8 (seed_config)
    TOK_RAM             reduce using rule 8 (seed_config)
    TOK_ROM             reduce using rule 8 (seed_config)
    TOK_WOM             reduce using rule 8 (seed_config)

    config_file  go to state 3
    config       go to state 4
    seed_config  go to state 5
    eolns        go to state 6
    eoln         go to state 7
    error_tok    go to state 8


State 1

  112 error_tok: error .

    $default  reduce using rule 112 (error_tok)


State 2

  111 eoln: '\n' .

    $default  reduce using rule 111 (eoln)


State 3

    0 $accept: config_file . $end

    $end  shift, and go to state 9


State 4

    1 config_file: config .
    2 config: config . sec_memspan
    3       | config . sec_macro
    4       | config . sec_varlike
    5       | config . sec_unsup

    TOK_SEC_BANKSWITCH  shift, and go to state 10
    TOK_SEC_MAPPING     shift, and go to state 11
    TOK_SEC_ECSBANK     shift, and go to state 12
    TOK_SEC_MEMATTR     shift, and go to state 13
    TOK_SEC_PRELOAD     shift, and go to state 14
    TOK_SEC_MACRO       shift, and go to state 15
    TOK_SEC_VARS        shift, and go to state 16
    TOK_SEC_JOYSTICK    shift, and go to state 17
    TOK_SEC_KEYS        shift, and go to state 18
    TOK_SEC_CAPSLOCK    shift, and go to state 19
    TOK_SEC_NUMLOCK     shift, and go to state 20
    TOK_SEC_SCROLLLOCK  shift, and go to state 21
    TOK_SEC_DISASM      shift, and go to state 22
    TOK_SEC_VOICES      shift, and go to state 23
    TOK_SEC_UNKNOWN     shift, and go to state 24
    TOK_RAM             shift, and go to state 25
    TOK_ROM             shift, and go to state 26
    TOK_WOM             shift, and go to state 27

    $default  reduce using rule 1 (config_file)

    sec_memspan   go to state 28
    bankswitch    go to state 29
    sec_banksw    go to state 30
    mapping       go to state 31
    sec_mapping   go to state 32
    ecsbank       go to state 33
    sec_ecsbank   go to state 34
    memattr       go to state 35
    sec_memattr   go to state 36
    preload       go to state 37
    sec_preload   go to state 38
    macro         go to state 39
    sec_macro     go to state 40
    sec_varlike   go to state 41
    varlike_head  go to state 42
    sec_unsup     go to state 43
    unknown_sec   go to state 44


State 5

    6 config: seed_config .

    $default  reduce using rule 6 (config)


State 6

    9 seed_config: eolns .
  109 eolns: eolns . eoln

    '\n'  shift, and go to state 2

    $default  reduce using rule 9 (seed_config)

    eoln  go to state 45


State 7

  110 eolns: eoln .

    $default  reduce using rule 110 (eolns)


State 8

    7 config: error_tok .

    $default  reduce using rule 7 (config)


State 9

    0 $accept: config_file $end .

    $default  accept


State 10

   15 bankswitch: TOK_SEC_BANKSWITCH .

    $default  reduce using rule 15 (bankswitch)


State 11

   22 mapping: TOK_SEC_MAPPING .

    $default  reduce using rule 22 (mapping)


State 12

   30 ecsbank: TOK_SEC_ECSBANK .

    $default  reduce using rule 30 (ecsbank)


State 13

   37 memattr: TOK_SEC_MEMATTR .

    $default  reduce using rule 37 (memattr)


State 14

   45 preload: TOK_SEC_PRELOAD .

    $default  reduce using rule 45 (preload)


State 15

   51 macro: TOK_SEC_MACRO .

    $default  reduce using rule 51 (macro)


State 16

   79 varlike_head: TOK_SEC_VARS .

    $default  reduce using rule 79 (varlike_head)


State 17

   80 varlike_head: TOK_SEC_JOYSTICK .

    $default  reduce using rule 80 (varlike_head)


State 18

   81 varlike_head: TOK_SEC_KEYS .

    $default  reduce using rule 81 (varlike_head)


State 19

   82 varlike_head: TOK_SEC_CAPSLOCK .

    $default  reduce using rule 82 (varlike_head)


State 20

   83 varlike_head: TOK_SEC_NUMLOCK .

    $default  reduce using rule 83 (varlike_head)


State 21

   84 varlike_head: TOK_SEC_SCROLLLOCK .

    $default  reduce using rule 84 (varlike_head)


State 22

   91 unknown_sec: TOK_SEC_DISASM .

    $default  reduce using rule 91 (unknown_sec)


State 23

   92 unknown_sec: TOK_SEC_VOICES .

    $default  reduce using rule 92 (unknown_sec)


State 24

   93 unknown_sec: TOK_SEC_UNKNOWN .

    $default  reduce using rule 93 (unknown_sec)


State 25

  106 memattr: TOK_RAM .

    $default  reduce using rule 106 (memattr)


State 26

  107 memattr: TOK_ROM .

    $default  reduce using rule 107 (memattr)


State 27

  108 memattr: TOK_WOM .

    $default  reduce using rule 108 (memattr)


State 28

    2 config: config sec_memspan .

    $default  reduce using rule 2 (config)


State 29

   16 sec_banksw: bankswitch . eoln banksw_list

    '\n'  shift, and go to state 2

    eoln  go to state 46


State 30

   10 sec_memspan: sec_banksw .

    $default  reduce using rule 10 (sec_memspan)


State 31

   23 sec_mapping: mapping . eoln mapping_list

    '\n'  shift, and go to state 2

    eoln  go to state 47


State 32

   11 sec_memspan: sec_mapping .

    $default  reduce using rule 11 (sec_memspan)


State 33

   31 sec_ecsbank: ecsbank . eoln ecsbank_list

    '\n'  shift, and go to state 2

    eoln  go to state 48


State 34

   12 sec_memspan: sec_ecsbank .

    $default  reduce using rule 12 (sec_memspan)


State 35

   38 sec_memattr: memattr . eoln memattr_list

    '\n'  shift, and go to state 2

    eoln  go to state 49


State 36

   13 sec_memspan: sec_memattr .

    $default  reduce using rule 13 (sec_memspan)


State 37

   46 sec_preload: preload . eoln preload_list

    '\n'  shift, and go to state 2

    eoln  go to state 50


State 38

   14 sec_memspan: sec_preload .

    $default  reduce using rule 14 (sec_memspan)


State 39

   52 sec_macro: macro . eoln macro_list

    '\n'  shift, and go to state 2

    eoln  go to state 51


State 40

    3 config: config sec_macro .

    $default  reduce using rule 3 (config)


State 41

    4 config: config sec_varlike .

    $default  reduce using rule 4 (config)


State 42

   78 sec_varlike: varlike_head . eoln var_list

    '\n'  shift, and go to state 2

    eoln  go to state 52


State 43

    5 config: config sec_unsup .

    $default  reduce using rule 5 (config)


State 44

   90 sec_unsup: unknown_sec . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 53


State 45

  109 eolns: eolns eoln .

    $default  reduce using rule 109 (eolns)


State 46

   16 sec_banksw: bankswitch eoln . banksw_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    banksw_list  go to state 56
    banksw_rec   go to state 57
    hex_num      go to state 58
    eoln         go to state 59
    error_tok    go to state 60


State 47

   23 sec_mapping: mapping eoln . mapping_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    mapping_list  go to state 61
    mapping_rec   go to state 62
    hex_num       go to state 63
    eoln          go to state 64
    error_tok     go to state 65


State 48

   31 sec_ecsbank: ecsbank eoln . ecsbank_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    ecsbank_list  go to state 66
    ecsbank_rec   go to state 67
    hex_num       go to state 68
    eoln          go to state 69
    error_tok     go to state 70


State 49

   38 sec_memattr: memattr eoln . memattr_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    memattr_list  go to state 71
    memattr_rec   go to state 72
    hex_num       go to state 73
    eoln          go to state 74
    error_tok     go to state 75


State 50

   46 sec_preload: preload eoln . preload_list

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55

    preload_list  go to state 76
    preload_rec   go to state 77
    hex_num       go to state 78
    error_tok     go to state 79


State 51

   52 sec_macro: macro eoln . macro_list

    error            shift, and go to state 1
    TOK_MAC_QUIET    shift, and go to state 80
    TOK_MAC_REG      shift, and go to state 81
    TOK_MAC_AHEAD    shift, and go to state 82
    TOK_MAC_BLANK    shift, and go to state 83
    TOK_MAC_INSPECT  shift, and go to state 84
    TOK_MAC_LOAD     shift, and go to state 85
    TOK_MAC_RUN      shift, and go to state 86
    TOK_MAC_POKE     shift, and go to state 87
    TOK_MAC_RUNTO    shift, and go to state 88
    TOK_MAC_TRACE    shift, and go to state 89
    TOK_MAC_VIEW     shift, and go to state 90
    TOK_MAC_WATCH    shift, and go to state 91
    '\n'             shift, and go to state 2

    macro_list  go to state 92
    macro_rec   go to state 93
    macro_line  go to state 94
    mac_reg     go to state 95
    eoln        go to state 96
    error_tok   go to state 97


State 52

   78 sec_varlike: varlike_head eoln . var_list

    error        shift, and go to state 1
    TOK_DECONLY  shift, and go to state 98
    TOK_DEC      shift, and go to state 99
    TOK_HEX      shift, and go to state 100
    TOK_NAME     shift, and go to state 101
    '\n'         shift, and go to state 2

    var_list   go to state 102
    var_rec    go to state 103
    string     go to state 104
    eoln       go to state 105
    error_tok  go to state 106


State 53

   90 sec_unsup: unknown_sec eoln .

    $default  reduce using rule 90 (sec_unsup)


State 54

  101 hex_num: TOK_DEC .

    $default  reduce using rule 101 (hex_num)


State 55

  100 hex_num: TOK_HEX .

    $default  reduce using rule 100 (hex_num)


State 56

   16 sec_banksw: bankswitch eoln banksw_list .
   17 banksw_list: banksw_list . banksw_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    $end                reduce using rule 16 (sec_banksw)
    TOK_SEC_BANKSWITCH  reduce using rule 16 (sec_banksw)
    TOK_SEC_MAPPING     reduce using rule 16 (sec_banksw)
    TOK_SEC_ECSBANK     reduce using rule 16 (sec_banksw)
    TOK_SEC_MEMATTR     reduce using rule 16 (sec_banksw)
    TOK_SEC_PRELOAD     reduce using rule 16 (sec_banksw)
    TOK_SEC_MACRO       reduce using rule 16 (sec_banksw)
    TOK_SEC_VARS        reduce using rule 16 (sec_banksw)
    TOK_SEC_JOYSTICK    reduce using rule 16 (sec_banksw)
    TOK_SEC_KEYS        reduce using rule 16 (sec_banksw)
    TOK_SEC_CAPSLOCK    reduce using rule 16 (sec_banksw)
    TOK_SEC_NUMLOCK     reduce using rule 16 (sec_banksw)
    TOK_SEC_SCROLLLOCK  reduce using rule 16 (sec_banksw)
    TOK_SEC_DISASM      reduce using rule 16 (sec_banksw)
    TOK_SEC_VOICES      reduce using rule 16 (sec_banksw)
    TOK_SEC_UNKNOWN     reduce using rule 16 (sec_banksw)
    TOK_RAM             reduce using rule 16 (sec_banksw)
    TOK_ROM             reduce using rule 16 (sec_banksw)
    TOK_WOM             reduce using rule 16 (sec_banksw)

    banksw_rec  go to state 107
    hex_num     go to state 58
    eoln        go to state 59
    error_tok   go to state 60


State 57

   18 banksw_list: banksw_rec .

    $default  reduce using rule 18 (banksw_list)


State 58

   19 banksw_rec: hex_num . '-' hex_num eoln

    '-'  shift, and go to state 108


State 59

   20 banksw_rec: eoln .

    $default  reduce using rule 20 (banksw_rec)


State 60

   21 banksw_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 109


State 61

   23 sec_mapping: mapping eoln mapping_list .
   24 mapping_list: mapping_list . mapping_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    $end                reduce using rule 23 (sec_mapping)
    TOK_SEC_BANKSWITCH  reduce using rule 23 (sec_mapping)
    TOK_SEC_MAPPING     reduce using rule 23 (sec_mapping)
    TOK_SEC_ECSBANK     reduce using rule 23 (sec_mapping)
    TOK_SEC_MEMATTR     reduce using rule 23 (sec_mapping)
    TOK_SEC_PRELOAD     reduce using rule 23 (sec_mapping)
    TOK_SEC_MACRO       reduce using rule 23 (sec_mapping)
    TOK_SEC_VARS        reduce using rule 23 (sec_mapping)
    TOK_SEC_JOYSTICK    reduce using rule 23 (sec_mapping)
    TOK_SEC_KEYS        reduce using rule 23 (sec_mapping)
    TOK_SEC_CAPSLOCK    reduce using rule 23 (sec_mapping)
    TOK_SEC_NUMLOCK     reduce using rule 23 (sec_mapping)
    TOK_SEC_SCROLLLOCK  reduce using rule 23 (sec_mapping)
    TOK_SEC_DISASM      reduce using rule 23 (sec_mapping)
    TOK_SEC_VOICES      reduce using rule 23 (sec_mapping)
    TOK_SEC_UNKNOWN     reduce using rule 23 (sec_mapping)
    TOK_RAM             reduce using rule 23 (sec_mapping)
    TOK_ROM             reduce using rule 23 (sec_mapping)
    TOK_WOM             reduce using rule 23 (sec_mapping)

    mapping_rec  go to state 110
    hex_num      go to state 63
    eoln         go to state 64
    error_tok    go to state 65


State 62

   25 mapping_list: mapping_rec .

    $default  reduce using rule 25 (mapping_list)


State 63

   26 mapping_rec: hex_num . '-' hex_num '=' hex_num eoln
   27            | hex_num . '-' hex_num '=' hex_num TOK_PAGE hex_num eoln

    '-'  shift, and go to state 111


State 64

   28 mapping_rec: eoln .

    $default  reduce using rule 28 (mapping_rec)


State 65

   29 mapping_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 112


State 66

   31 sec_ecsbank: ecsbank eoln ecsbank_list .
   32 ecsbank_list: ecsbank_list . ecsbank_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    $end                reduce using rule 31 (sec_ecsbank)
    TOK_SEC_BANKSWITCH  reduce using rule 31 (sec_ecsbank)
    TOK_SEC_MAPPING     reduce using rule 31 (sec_ecsbank)
    TOK_SEC_ECSBANK     reduce using rule 31 (sec_ecsbank)
    TOK_SEC_MEMATTR     reduce using rule 31 (sec_ecsbank)
    TOK_SEC_PRELOAD     reduce using rule 31 (sec_ecsbank)
    TOK_SEC_MACRO       reduce using rule 31 (sec_ecsbank)
    TOK_SEC_VARS        reduce using rule 31 (sec_ecsbank)
    TOK_SEC_JOYSTICK    reduce using rule 31 (sec_ecsbank)
    TOK_SEC_KEYS        reduce using rule 31 (sec_ecsbank)
    TOK_SEC_CAPSLOCK    reduce using rule 31 (sec_ecsbank)
    TOK_SEC_NUMLOCK     reduce using rule 31 (sec_ecsbank)
    TOK_SEC_SCROLLLOCK  reduce using rule 31 (sec_ecsbank)
    TOK_SEC_DISASM      reduce using rule 31 (sec_ecsbank)
    TOK_SEC_VOICES      reduce using rule 31 (sec_ecsbank)
    TOK_SEC_UNKNOWN     reduce using rule 31 (sec_ecsbank)
    TOK_RAM             reduce using rule 31 (sec_ecsbank)
    TOK_ROM             reduce using rule 31 (sec_ecsbank)
    TOK_WOM             reduce using rule 31 (sec_ecsbank)

    ecsbank_rec  go to state 113
    hex_num      go to state 68
    eoln         go to state 69
    error_tok    go to state 70


State 67

   33 ecsbank_list: ecsbank_rec .

    $default  reduce using rule 33 (ecsbank_list)


State 68

   34 ecsbank_rec: hex_num . ':' hex_num '-' hex_num '=' hex_num eoln

    ':'  shift, and go to state 114


State 69

   35 ecsbank_rec: eoln .

    $default  reduce using rule 35 (ecsbank_rec)


State 70

   36 ecsbank_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 115


State 71

   38 sec_memattr: memattr eoln memattr_list .
   39 memattr_list: memattr_list . memattr_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55
    '\n'     shift, and go to state 2

    $end                reduce using rule 38 (sec_memattr)
    TOK_SEC_BANKSWITCH  reduce using rule 38 (sec_memattr)
    TOK_SEC_MAPPING     reduce using rule 38 (sec_memattr)
    TOK_SEC_ECSBANK     reduce using rule 38 (sec_memattr)
    TOK_SEC_MEMATTR     reduce using rule 38 (sec_memattr)
    TOK_SEC_PRELOAD     reduce using rule 38 (sec_memattr)
    TOK_SEC_MACRO       reduce using rule 38 (sec_memattr)
    TOK_SEC_VARS        reduce using rule 38 (sec_memattr)
    TOK_SEC_JOYSTICK    reduce using rule 38 (sec_memattr)
    TOK_SEC_KEYS        reduce using rule 38 (sec_memattr)
    TOK_SEC_CAPSLOCK    reduce using rule 38 (sec_memattr)
    TOK_SEC_NUMLOCK     reduce using rule 38 (sec_memattr)
    TOK_SEC_SCROLLLOCK  reduce using rule 38 (sec_memattr)
    TOK_SEC_DISASM      reduce using rule 38 (sec_memattr)
    TOK_SEC_VOICES      reduce using rule 38 (sec_memattr)
    TOK_SEC_UNKNOWN     reduce using rule 38 (sec_memattr)
    TOK_RAM             reduce using rule 38 (sec_memattr)
    TOK_ROM             reduce using rule 38 (sec_memattr)
    TOK_WOM             reduce using rule 38 (sec_memattr)

    memattr_rec  go to state 116
    hex_num      go to state 73
    eoln         go to state 74
    error_tok    go to state 75


State 72

   40 memattr_list: memattr_rec .

    $default  reduce using rule 40 (memattr_list)


State 73

   41 memattr_rec: hex_num . '-' hex_num '=' memattr dec_num eoln
   42            | hex_num . '-' hex_num eoln

    '-'  shift, and go to state 117


State 74

   43 memattr_rec: eoln .

    $default  reduce using rule 43 (memattr_rec)


State 75

   44 memattr_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 118


State 76

   46 sec_preload: preload eoln preload_list .
   47 preload_list: preload_list . preload_rec

    error    shift, and go to state 1
    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55

    $end                reduce using rule 46 (sec_preload)
    TOK_SEC_BANKSWITCH  reduce using rule 46 (sec_preload)
    TOK_SEC_MAPPING     reduce using rule 46 (sec_preload)
    TOK_SEC_ECSBANK     reduce using rule 46 (sec_preload)
    TOK_SEC_MEMATTR     reduce using rule 46 (sec_preload)
    TOK_SEC_PRELOAD     reduce using rule 46 (sec_preload)
    TOK_SEC_MACRO       reduce using rule 46 (sec_preload)
    TOK_SEC_VARS        reduce using rule 46 (sec_preload)
    TOK_SEC_JOYSTICK    reduce using rule 46 (sec_preload)
    TOK_SEC_KEYS        reduce using rule 46 (sec_preload)
    TOK_SEC_CAPSLOCK    reduce using rule 46 (sec_preload)
    TOK_SEC_NUMLOCK     reduce using rule 46 (sec_preload)
    TOK_SEC_SCROLLLOCK  reduce using rule 46 (sec_preload)
    TOK_SEC_DISASM      reduce using rule 46 (sec_preload)
    TOK_SEC_VOICES      reduce using rule 46 (sec_preload)
    TOK_SEC_UNKNOWN     reduce using rule 46 (sec_preload)
    TOK_RAM             reduce using rule 46 (sec_preload)
    TOK_ROM             reduce using rule 46 (sec_preload)
    TOK_WOM             reduce using rule 46 (sec_preload)

    preload_rec  go to state 119
    hex_num      go to state 78
    error_tok    go to state 79


State 77

   48 preload_list: preload_rec .

    $default  reduce using rule 48 (preload_list)


State 78

   49 preload_rec: hex_num . '-' hex_num '=' hex_num eoln

    '-'  shift, and go to state 120


State 79

   50 preload_rec: error_tok . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 121


State 80

   55 macro_rec: TOK_MAC_QUIET . macro_line
   57          | TOK_MAC_QUIET . eoln

    error            shift, and go to state 1
    TOK_MAC_REG      shift, and go to state 81
    TOK_MAC_AHEAD    shift, and go to state 82
    TOK_MAC_BLANK    shift, and go to state 83
    TOK_MAC_INSPECT  shift, and go to state 84
    TOK_MAC_LOAD     shift, and go to state 85
    TOK_MAC_RUN      shift, and go to state 86
    TOK_MAC_POKE     shift, and go to state 87
    TOK_MAC_RUNTO    shift, and go to state 88
    TOK_MAC_TRACE    shift, and go to state 89
    TOK_MAC_VIEW     shift, and go to state 90
    TOK_MAC_WATCH    shift, and go to state 91
    '\n'             shift, and go to state 2

    macro_line  go to state 122
    mac_reg     go to state 95
    eoln        go to state 123
    error_tok   go to state 97


State 81

   71 mac_reg: TOK_MAC_REG .

    $default  reduce using rule 71 (mac_reg)


State 82

   66 macro_line: TOK_MAC_AHEAD . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 124


State 83

   67 macro_line: TOK_MAC_BLANK . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 125


State 84

   63 macro_line: TOK_MAC_INSPECT . hex_num eoln

    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55

    hex_num  go to state 126


State 85

   60 macro_line: TOK_MAC_LOAD . string dec_num hex_num eoln

    TOK_DECONLY  shift, and go to state 98
    TOK_DEC      shift, and go to state 99
    TOK_HEX      shift, and go to state 100
    TOK_NAME     shift, and go to state 101

    string  go to state 127


State 86

   68 macro_line: TOK_MAC_RUN . eoln

    '\n'  shift, and go to state 2

    eoln  go to state 128


State 87

   62 macro_line: TOK_MAC_POKE . hex_num hex_num eoln

    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55

    hex_num  go to state 129


State 88

   64 macro_line: TOK_MAC_RUNTO . hex_num eoln

    TOK_DEC  shift, and go to state 54
    TOK_HEX  shift, and go to state 55

    hex_num  go to state 130


State 89

   65 macro_line: TOK_MAC_TRACE . hex_num eoln
